--- a/style.css
+++ b/style.css
@@ -2,12 +2,43 @@
     margin: 0px;
 }
 
+*::selection{
+    color: rgb(32, 128, 165);
+    background-color: rgb(12, 15, 41);
+}
+
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 15vh;
+    margin-top: 10px;
     background-color: rgb(0, 21, 255);
+}
+
+.titulo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+.quero-ser{
+    color: rgb(255, 153, 0);
+}
+
+.text-os-net{
+    font-size:larger;
+}
+
+.texto-secundario{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: 200px;
 }
 
 .container{
@@ -17,7 +48,6 @@ body{
     flex-direction: column;
     gap: 1rem;
     width: 500px;
-    height: 500px;
     border-radius: 5px;
 }
 
@@ -59,4 +89,36 @@ body{
 
 .btn-infos:hover{
     cursor: pointer;
+}
+
+
+#CPF-frente, #RG-frente{
+    display: none;
+}
+
+.CPF-Uploader{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 8px;
+    width: 200px;
+    height: 100;
+    padding: 5px;
+}
+
+.RG-Uploader{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 8px;
+    width: 200px;
+    height: 100;
+    padding: 5px;
+
 }
