--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@
 
 
 body{
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
     background-color: rgb(0, 21, 255);
 }
 
@@ -48,18 +45,20 @@ body{
     width: 200px;
 }
 
-.container{
+.container-1{
     display: flex;
-    align-items: center;
     justify-content: center;
+}
+
+.container-2{
+    display: flex;
     flex-direction: column;
-    gap: 1rem;
-    width: 500px;
-    border-radius: 5px;
+    gap: 10px;
+
 }
 
 .input-opt{
-    width: 200px;
+    width: 240px;
     height: 30px;
     padding: 5px;
     border-radius: 2px;
@@ -67,7 +66,7 @@ body{
 }
 
 #opt-planos, #opt-dia{
-    width: 210px;
+    width: 250px;
     height: 40px;
     padding: 5px;
     border-radius: 2px;
@@ -83,7 +82,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(255, 58, 0);
     color: white;
-
     width: 200px;
     height: 50px;
     padding: 5px;
@@ -106,7 +104,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 15px;
+    gap: 35px;
 }
 
 .input-data-nasc{
@@ -126,11 +124,10 @@ label{
     color: white;
     display: flex;
     align-items: center;
-    gap: 9px;
-
+    justify-content: center;
+    gap: 6px;
+    margin-top: 50vh;
     position: fixed;
-    margin-top: 410px;
-
     width: 290px;
     height: 90px;
     padding: 10px;
