--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     font-family: arial;
-    margin: 0px;
+    margin: 0;
 }
 
 *::selection{
@@ -46,6 +46,7 @@ body{
 }
 
 .container-1{
+    margin: 100px 0;
     display: flex;
     justify-content: center;
 }
